feat : implement best practices